boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_qualifies_kotlin_primitive_names_shadowed_by_a_sibling_variant.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
assertion_line: 124
expression: "rendered_fixture(\"enums/primitive_shadow\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo

sealed class PrimitiveValue {
    internal abstract fun wireSize(): kotlin.Int

    internal abstract fun writeTo(writer: WireWriter)

    internal fun toByteArray(): ByteArray {
        val buffer = WireWriterPool.acquire(wireSize())
        val writer = buffer.writer
        try {
            writeTo(writer)
            return buffer.bytes()
        } finally {
            buffer.close()
        }
    }


    object Null : PrimitiveValue() {
        internal override fun wireSize(): kotlin.Int {
            return 4
        }

        internal override fun writeTo(writer: WireWriter) {
            writer.writeU32(0.toUInt())
        }
    }
    data class Bool(
        val field0: Boolean
    ) : PrimitiveValue() {
        internal override fun wireSize(): kotlin.Int {
            return 4 + 1
        }

        internal override fun writeTo(writer: WireWriter) {
            writer.writeU32(1.toUInt())
            writer.writeBool(this.field0)
        }
    }
    data class Int(
        val field0: Long
    ) : PrimitiveValue() {
        internal override fun wireSize(): kotlin.Int {
            return 4 + 8
        }

        internal override fun writeTo(writer: WireWriter) {
            writer.writeU32(2.toUInt())
            writer.writeI64(this.field0)
        }
    }
    data class Double(
        val field0: kotlin.Double
    ) : PrimitiveValue() {
        internal override fun wireSize(): kotlin.Int {
            return 4 + 8
        }

        internal override fun writeTo(writer: WireWriter) {
            writer.writeU32(3.toUInt())
            writer.writeF64(this.field0)
        }
    }

    companion object {
        internal fun fromReader(reader: WireReader): PrimitiveValue {
            val tag = reader.readU32()
            return when (tag) {
                0.toUInt() -> Null
                1.toUInt() -> Bool(reader.readBool())
                2.toUInt() -> Int(reader.readI64())
                3.toUInt() -> Double(reader.readF64())
                else -> throw IllegalArgumentException("unknown PrimitiveValue tag: $tag")
            }
        }

        internal fun fromByteArray(bytes: ByteArray): PrimitiveValue {
            val reader = WireReader(bytes)
            return fromReader(reader)
        }
    }
}
